--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -38,7 +38,9 @@ button{
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
-
+}
+button:hover{
+    background-color: red;
 }
 .details{
     display: flex;
